# correlation_rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: benchmark.rs
src/: analysis.rs  correlations.rs  gn2_parser.rs  lib.rs  main.rs  mock_dataset.txt  parser.rs  reader.rs  sample_json_file.json  sorter.rs
tests/data/: IdBIiDslEf.txt  XLkKsoNtFg.json  data.txt  dataset_2.txt  dataset_with_nans.txt  sample_json_file.json
