[package]
name = "correlation_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

GSL = "4.0"

assert_approx_eq = "1.1.0"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false