[package]
name = "correlation_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

GSL = "6.0.0"

assert_approx_eq = "1.1.0"


serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

extsort = "0.4.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

